--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
-/*<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<%
-  
- %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-<c:set var="ctx" value="${pageContext.request.contextPath}" />*/
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Insert title here</title>
-<link rel="stylesheet" href="http://apps.bdimg.com/libs/todc-bootstrap/3.1.1-3.2.1/todc-bootstrap.min.css">
+<link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<%-- <script type="text/javascript" src="${ctx }/static/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="${ctx }/static/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="${ctx }/static/flexplayer/flexpaper_flash.js"></script>  
-<script type="text/javascript" src="${ctx }/static/flexplayer/flexpaper_flash_debug.js"></script> --%>
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+
+
 <body>
 	<div class="panel panel-primary panel-lg">
 	  
@@ -35,60 +21,33 @@
 	            <div class="input-group-addon" style="cursor:pointer" id="search">搜索</div>
 	       </div>
 		</form>
-	    </div>
+	 </div>
 	    
 	  <div style="height:65px;width:100%;background:gray">
 	  </div>
 	    <div class="panel-body" style="padding:0;  margin-top:5px">
 			<ul class="list-group" >
 			</ul>
-				   <!--  <div style="">  
-        <a id="viewerPlaceHolder"  
-            style="width:100%;display:block"></a>  
-        <script type="text/javascript">  
-            var fp = new FlexPaperViewer('FlexPaperViewer',  
-                    'viewerPlaceHolder', {  
-                        config : {//new FlexPaperView要传三个参数  这里的是FlexPaperViewer,viewerPlaceHolder，和config  
-                            SwfFile : escape('swf/666.swf'),//需要Flex打开的文档，但是我发现没有FlexPaperViewer的时候就不恩能够运行。  
-                            Scale : 1, //缩放的意思  
-                            ZoomTransition : 'easeOut',//缩放样式的选择  
-                            ZoomTime : 0.5,//缩放使用的时间  
-                            ZoomInterval : 0.2,//缩放比例之间间隔，默认值为0.1，该值为正数。  神马意思？？？  
-                            FitPageOnLoad : true,//自适应页面，工具栏上有  
-                            FitWidthOnLoad : false,//自适应宽度，工具栏上有  
-                            FullScreenAsMaxWindow : false,//如果设置为true的时候，点击全屏并不是全屏而是一个新页面，据说独立的flex播放的时候用这个比较合适  
-                            ProgressiveLoading : false,//true的话不全部加载文档，边看边加载  
-                            MinZoomSize : 0.2,//最大缩放比例  
-                            MaxZoomSize : 10,//最小缩放比例  
-                            SearchMatchAll : false,//为true的时候搜索的时候便会出现高亮  
-                            InitViewMode : 'Portrait',//设置启动模式如"Portrait" or "TwoPage"  这句话什么意思？？？  
-                            PrintPaperAsBitmap : false,  
-  
-                            ViewModeToolsVisible : true,//工具栏上是否显示样式选择框  
-                            ZoomToolsVisible : true,//工具栏上是否显示缩放工具  
-                            NavToolsVisible : true,//工具栏上是否显示导航工具  
-                            CursorToolsVisible : true,//工具栏上是否显示光标工具  
-                            SearchToolsVisible : true,//工具栏上是否显示搜索  
-  
-                            localeChain : 'en_US'//设置语言  
-                        }  
-                    });  
-        </script>   -->
-    </div>  
+   		 </div>  
 	    </div>
-	    <div class="panel-footer">
+	    <div class="panel-footer" style="position:fixed;bottom:0px;width:100%">
 			<button class="btn btn-primary" id="top"><span style="color:#fff" class="glyphicon glyphicon-chevron-left"></span></button>
 			<!-- <button class="btn btn-primary"><span style="color:#fff" class="glyphicon glyphicon-chevron-right"></span></button> -->
 		</div>
 	</div>
 </body>
+<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script type="text/javascript" src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 <script>
 
 var file = '<span class="glyphicon glyphicon-file"></span>';
 var catalog = '<span class="glyphicon glyphicon-folder-open"></span>';
 var curentPath = "f://"
+var height = document.body.scrollWidth - 200;
+$(".panel-body").css("height",height);
 
+console.log(height);
 function listFile(Currentpath, flag) {
 	$.ajax({
 		url:"file/getFileList",
