--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <title>Insert title here</title>
 
 <link href="./css/bootstrap.min.css" rel="stylesheet">
 </head>
-
-
 <body>
 	<div class="panel panel-primary panel-lg">
 	  
